--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "font-awesome": "^4.7.0",
