--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
+    "faker": "^5.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.15",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
